--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          ref: ${{ github.head_ref }}
           
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -57,4 +57,8 @@ jobs:
                   fi
               done
           done
-     
+
+      - name: apply changes to repo
+        uses: stefanzweifel/git-auto-commit-action@v5
+
+    
