--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -59,10 +59,10 @@ jobs:
                   fi
 
                   title=$(echo $image_tag|awk -F ':' '{print $1}')
-                  echo "- [$title](https://github.com/${GITHUB_REPOSITORY}/pkgs/container/${image_tag//\//%2F})" >> $readme
-                  echo "```sh" >> $readme
+                  echo "- [$title](https://github.com/${GITHUB_REPOSITORY}/pkgs/container/${title//\//%2F})" >> $readme
+                  echo '```sh' >> $readme
                   echo "docker pull ghcr.io/${GITHUB_REPOSITORY_OWNER}/$image_tag" >> $readme
-                  echo "```" >> $readme
+                  echo '```' >> $readme
                   echo "" >> $readme
               done
           done
