--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,26 +42,27 @@ jobs:
               for _file in $(ls $dir); do
                   image_file="$dir/$_file"
                   pushed_file="$pushed_dir/$_file"
-                  image_tag=$(head -n 1 $image_file | tr -d '[:space:]')
-                  pushed_tag=""
+                  image=$(head -n 1 $image_file | tr -d '[:space:]')
+                  image_tag=$(echo $image|awk -F ':' '{print $2}')
+                  pushed_tag="a-fake-tag-fb5ebbe64a7f1d6c7686"
 
                   if [[ -f "$pushed_file" ]]; then
-                      pushed_tag=$(head -n 1 $pushed_file | tr -d '[:space:]')
+                      pushed_tag=$(head -n 1 $pushed_file | tr -d '[:space:]'|awk -F ':' '{print $2}')
                   fi
                   if [[ "$image_tag" != "$pushed_tag" ]]; then
                       echo 'not pushed yet, now pushing.'
-                      docker pull $image_tag
-                      docker tag $image_tag ghcr.io/${GITHUB_REPOSITORY_OWNER}/$image_tag
-                      docker push ghcr.io/${GITHUB_REPOSITORY_OWNER}/$image_tag
-                      echo "$image_tag" > $pushed_file
+                      docker pull $image
+                      docker tag $image ghcr.io/${GITHUB_REPOSITORY_OWNER}/$image
+                      docker push ghcr.io/${GITHUB_REPOSITORY_OWNER}/$image
+                      echo "ghcr.io/${GITHUB_REPOSITORY_OWNER}/$image" > $pushed_file
                   else
-                      echo "$image_tag pushed."
+                      echo "$image pushed."
                   fi
 
-                  title=$(echo $image_tag|awk -F ':' '{print $1}')
-                  echo "- [$title](https://github.com/${GITHUB_REPOSITORY}/pkgs/container/${title//\//%2F})" >> $readme
-                  echo '```sh' >> $readme
-                  echo "docker pull ghcr.io/${GITHUB_REPOSITORY_OWNER}/$image_tag" >> $readme
+                  $image_name=$(echo $image|awk -F ':' '{print $1}')
+                  echo "- $image_name" >> $readme
+                  echo '```nginx' >> $readme
+                  echo "docker pull $(cat $pushed_file)" >> $readme
                   echo '```' >> $readme
                   echo "" >> $readme
               done
