--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,12 +31,19 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to GitLab
+        id: login_to_gitlab
         uses: docker/login-action@v3
         with:
           registry: registry.gitlab.com
           username: ${{ vars.GITLAB_USERNAME }}
           password: ${{ secrets.GITLAB_PASSWORD }}
         continue-on-error: true
+
+      - name: check gitlab login
+        shell: bash
+        run: |
+          if [[ ${{ steps.login_to_gitlab.outcome }} == "success" ]]; then 
+            echo "PUSH_TO_GITLAB=yes" >> "$GITHUB_OUTPUT"
           
       - name: pull and push images
         shell: bash
@@ -45,7 +52,7 @@ jobs:
           pushed_dir="pushed"
           readme="README.md"
           cat _README.md > $readme
-          
+          echo ${PUSH_TO_GITLAB}
           for dir in $dirs; do
               for _file in $(ls $dir); do
                   image_file="$dir/$_file"
