--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,10 +41,8 @@ jobs:
 
       - name: check gitlab login
         shell: bash
-        run: |
-          if [[ ${{ steps.login_to_gitlab.outcome }} == "success" ]]; then 
-            echo "PUSH_TO_GITLAB=yes" >> "$GITHUB_OUTPUT"
-          fi
+        if: ${{ steps.login_to_gitlab.outcome == 'success' }}
+        run: echo "PUSH_TO_GITLAB=yes" >> "$GITHUB_OUTPUT"
           
       - name: pull and push images
         shell: bash
@@ -53,7 +51,7 @@ jobs:
           pushed_dir="pushed"
           readme="README.md"
           cat _README.md > $readme
-          echo ${PUSH_TO_GITLAB}
+          echo "push to gitlab: ${PUSH_TO_GITLAB}"
           for dir in $dirs; do
               for _file in $(ls $dir); do
                   image_file="$dir/$_file"
